[package]
name = "cfgz"
version = "0.1.0"
authors = ["Naveneetha Vasudevan <naveneetha@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
doc = false
name = "cfgz"

[build-dependencies]
cfgrammar = "0.10.1"
lrlex = "0.10.1"
lrpar = "0.10.1"

[dependencies]
cfgrammar = "0.10.1"
lrlex = "0.10.1"
lrpar = "0.10.1"

[dependencies.rand]
features = ["small_rng"]
version = "0.7.3"
