[package]
name = "cfgz"
version = "0.1.0"
authors = ["Naveneetha Vasudevan <naveneetha@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
doc = false
name = "cfgz"

[build-dependencies]
cfgrammar = "0.10.1"
lrlex = "0.10.1"
lrpar = "0.10.1"

[dependencies]
cfgrammar = "0.10.1"
lrlex = "0.10.1"
lrpar = "0.10.1"
rayon = "1.5.1"
prettytable-rs = "0.8.0"
chrono = "0.4.19"
tempfile = "3.2.0"

[dependencies.rand]
features = ["small_rng"]
version = "0.7.3"